[package]
name = "etcddump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
etcd-client = { version = "0.11" }
reqwest = { version = "0.11.20", default-features = false }
anyhow = "1.0.71"
clap = { version = "4.4.2", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap", "clap-parse"] }
libc = "0.2.148"
